--- a/proportal/views/inc/title/gene.tt
+++ b/proportal/views/inc/title/gene.tt
@@ -6,7 +6,7 @@
 		surtitle = self.locus_type;
 	END;
 	article_title = self.gene_display_name;
-	subtitle = 'from ' _ taxon_name_link( x = {}, obj = self );
+	subtitle = 'from ' _ taxon_name_link( {}, self );
 
 	button = {
 		cart => {
